// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move move layer in artboard 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
└── <Artboard> Artboard { x: 450, y: 450, w: 300, h: 300 }
    └── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
└── <Artboard> Artboard { x: 450, y: 450, w: 300, h: 300 }
    └── <Rectangle> Rectangle { x: 15, y: 15, w: 100, h: 100 }"
`;

exports[`move move multiple layers 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
└── <Rectangle> Rectangle { x: 200, y: 200, w: 100, h: 100 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 15, y: 15, w: 100, h: 100 }
└── <Rectangle> Rectangle { x: 215, y: 215, w: 100, h: 100 }"
`;

exports[`move move one layer 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
└── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
└── <Rectangle> Rectangle { x: 15, y: 15, w: 100, h: 100 }"
`;

exports[`move move with snap 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
└── <Rectangle> Rectangle { x: 200, y: 200, w: 100, h: 100 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 200, y: 15, w: 100, h: 100 }
└── <Rectangle> Rectangle { x: 200, y: 200, w: 100, h: 100 }"
`;
